--- a/layouts/partials/gallery.html
+++ b/layouts/partials/gallery.html
@@ -36,10 +36,9 @@
       {{ $thumbnail := ($image.Fit (printf "%s %s" "600x600" .rotation)) }}
       {{ $full := ($image.Fit (printf "%s %s" "1600x1600" .rotation)) }}
       {{ $color := index $thumbnail.Colors 0 | default "transparent" }}
-
       {{ if $image.Params.videourl }}
-          <a class="gallery-item cursor-zoom-in" href="{{ $image.RelPermalink }}" data-pswp-type="pswp-video" data-video-url="{{ $image.Params.videourl }}" data-pswp-width="{{ $full.Width }}" data-pswp-height="{{ $full.Height }}" title="{{ .Title }}" itemscope itemtype="https://schema.org/ImageObject" style="aspect-ratio: {{ $thumbnail.Width }} / {{ $thumbnail.Height }}">
-            <img loading="lazy" width="{{ $thumbnail.Width }}" height="{{ $thumbnail.Height }}" src="{{ $thumbnail.RelPermalink }}" style="background-color: {{ $color }}" alt="{{ $image.Params.videourl }}" />
+          <a class="gallery-item cursor-zoom-in" href="{{ $image.RelPermalink }}" data-pswp-src="{{ $full.RelPermalink }}" data-pswp-type="pswp-video" data-video-url="{{ $image.Params.videourl }}" data-pswp-width="{{ $full.Width }}" data-pswp-height="{{ $full.Height }}" title="{{ .Title }}" itemscope itemtype="https://schema.org/ImageObject" style="aspect-ratio: {{ $thumbnail.Width }} / {{ $thumbnail.Height }}">
+            <img loading="lazy" width="{{ $thumbnail.Width }}" height="{{ $thumbnail.Height }}" src="{{ $thumbnail.RelPermalink }}" style="background-color: {{ $color }}" alt="{{ .Title }}" />
             <meta itemprop="contentUrl" content="{{ $image.RelPermalink }}" />
           </a>
       {{ else }}
