iframe 로드 전 텍스트 추가

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -10,3 +10,12 @@
     width : 100%;
     height : 100%;
 }
+
+#readytoloadtxt
+{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    color: white;
+}
