--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -19,3 +19,18 @@
     text-align: center;
     color: white;
 }
+
+#readytoloadtxt img
+{
+    width: 100%;
+    height: 100%;
+    opacity: 70%;
+    position: absolute;
+}
+
+#readytoloadtxt p
+{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
