--- a/layouts/partials/gallery.html
+++ b/layouts/partials/gallery.html
@@ -37,7 +37,7 @@
       {{ $full := ($image.Fit (printf "%s %s" "1600x1600" .rotation)) }}
       {{ $color := index $thumbnail.Colors 0 | default "transparent" }}
       {{ if $image.Params.videourl }}
-          <a class="gallery-item cursor-zoom-in" href="{{ $image.RelPermalink }}" data-pswp-src="{{ $full.RelPermalink }}" data-pswp-type="pswp-video" data-video-url="{{ $image.Params.videourl }}" data-pswp-width="{{ $full.Width }}" data-pswp-height="{{ $full.Height }}" title="{{ .Title }}" itemscope itemtype="https://schema.org/ImageObject" style="aspect-ratio: {{ $thumbnail.Width }} / {{ $thumbnail.Height }}">
+          <a class="gallery-item cursor-zoom-in" href="{{ $image.RelPermalink }}" data-pswp-src="{{ $full.RelPermalink }}" data-pswp-width="{{ $full.Width }}" data-pswp-height="{{ $full.Height }}" title="{{ .Title }}" itemscope itemtype="https://schema.org/ImageObject" style="aspect-ratio: {{ $thumbnail.Width }} / {{ $thumbnail.Height }}" data-pswp-type="pswp-video" data-video-url="{{ $image.Params.videourl }}" >
             <img loading="lazy" width="{{ $thumbnail.Width }}" height="{{ $thumbnail.Height }}" src="{{ $thumbnail.RelPermalink }}" style="background-color: {{ $color }}" alt="{{ .Title }}" />
             <meta itemprop="contentUrl" content="{{ $image.RelPermalink }}" />
           </a>
@@ -45,11 +45,6 @@
           <a class="gallery-item cursor-zoom-in" href="{{ $image.RelPermalink }}" data-pswp-src="{{ $full.RelPermalink }}" data-pswp-width="{{ $full.Width }}" data-pswp-height="{{ $full.Height }}" title="{{ .Title }}" itemscope itemtype="https://schema.org/ImageObject" style="aspect-ratio: {{ $thumbnail.Width }} / {{ $thumbnail.Height }}">
             <img loading="lazy" width="{{ $thumbnail.Width }}" height="{{ $thumbnail.Height }}" src="{{ $thumbnail.RelPermalink }}" style="background-color: {{ $color }}" alt="{{ .Title }}" />
             <meta itemprop="contentUrl" content="{{ $image.RelPermalink }}" />
-            {{ with site.Params.Author }}
-              <span itemprop="creator" itemtype="https://schema.org/Person" itemscope>
-                <meta itemprop="name" content="{{ site.Params.Author.name }}" />
-              </span>
-            {{ end }}
           </a>
       {{ end }}
     {{ end }}
