--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,6 +5,13 @@
 @import "photoswipe/dist/photoswipe";
 @import "photoswipe-dynamic-caption-plugin/photoswipe-dynamic-caption-plugin";
 
+@font-face{
+  font-family: "ReenieBeanie";
+  src:url("https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap");
+  font-weight: 400;
+  font-style: normal;
+}
+
 :root {
   color-scheme: light;
   --surface-1: #ffffff;
